Update content in index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,6 @@
               <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
               <h4><a href="" class="stretched-link">Donaciones</a></h4>
               <p>Recaudación de fondos y proporcionar donaciones a los grupos más vulnerables. </p>
-
             </div>
           </div><!-- End Service Item -->
 
@@ -254,9 +253,12 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>About Us</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas
-            asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <h2>Sobre Nosotros</h2>
+         <p>
+          Somos una Fundación creada según <strong> Resolución Administrativa No. 009-
+            DDSD-2022 del Ministerio de Inclusión Económica y Social </strong>  con fecha 6 de abril del 2022 
+          en la que se otorga Personalidad Jurídica y se aprueban los estatutos.
+         </p> 
         </div>
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
@@ -273,9 +275,9 @@
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Voluptates</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Corrupti</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Misión</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Visión</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Objetivo General</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
