Update favicon and hero image, modify mission and vision tabs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/icono-removebg-preview.png" rel="icon">
+  <link href="assets/img/icono-removebg-preview.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -137,7 +137,7 @@
           <div class="row justify-content-center gy-6">
 
             <div class="col-lg-5 col-md-8">
-              <img src="assets/img/hero-carousel/hero-carousel-1.svg" alt="" class="img-fluid img">
+              <img src="assets/img/portada.jpg" alt="" class="img-fluid img">
             </div>
 
             <div class="col-lg-9 text-center">
@@ -214,7 +214,8 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-activity icon"></i></div>
+              <div class="icon"><i class="bi bi-book-half icon"></i></div>
+              <i class=""></i>
               <h4><a href="" class="stretched-link">Capacitaciones</a></h4>
               <p>Capacitaciones en varias áreas como belleza, electricidad, informática y mucho más. </p>            </div>
           </div><!-- End Service Item -->
@@ -270,14 +271,15 @@
           </div>
 
           <div class="col-lg-7">
-            <h3 class="pt-0 pt-lg-5">Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero
+            <h3 class="pt-0 pt-lg-5">
+              La Fundación Avanzando Juntos se base en 3 pilares fundamentales:
             </h3>
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
               <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Misión</a></li>
               <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Visión</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Objetivo General</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Valores</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
@@ -285,10 +287,12 @@
 
               <div class="tab-pane fade show active" id="tab1">
 
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <p class="fst-italic">Promover el derecho de las personas a la educación mediante convenios de ayuda 
+                  mutua con énfasis en grupos de atención prioritaria, promoviendo el desarrollo integral 
+                  de las capacidades individuales y colectivas como instrumento para la transformación 
+                  de la sociedad y la erradicación de la pobreza.</p>
 
-                <div class="d-flex align-items-center mt-4">
+                <!-- <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
                   <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                 </div>
@@ -309,16 +313,22 @@
                 </div>
                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
                   quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
+                  voluptatem eum.</p> -->
 
               </div><!-- End Tab 1 Content -->
 
               <div class="tab-pane fade show" id="tab2">
 
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <p class="fst-italic">Nos vemos como una Fundación líder y referente en la capacitación de grupos 
+                  vulnerables de la sociedad, donde cada persona tenga la oportunidad de desarrollar 
+                  plenamente su potencial. Nuestra visión es una sociedad inclusiva y equitativa, donde 
+                  todos los individuos, sin importar sus circunstancias, tengan acceso a oportunidades de 
+                  aprendizaje y empoderamiento. A través de programas innovadores y colaborativos, 
+                  aspiramos a transformar vidas y generar un impacto significativo en las comunidades 
+                  que servimos.
+                  </p>
 
-                <div class="d-flex align-items-center mt-4">
+                <!-- <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
                   <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
                 </div>
@@ -339,37 +349,48 @@
                 </div>
                 <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
                   quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
+                  voluptatem eum.</p> -->
 
               </div><!-- End Tab 2 Content -->
 
               <div class="tab-pane fade show" id="tab3">
 
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <p class="fst-italic">Los valores de la Fundación Avanzando Juntos</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>Transparencia</h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
-                  eveniet magni quaerat nemo et.</p>
+                <!-- <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
+                  eveniet magni quaerat nemo et.</p> -->
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
+                  <h4>Independencia</h4>
                 </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
+                <!-- <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
                   molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et
-                  perferendis.</p>
+                  perferendis.</p> -->
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
+                  <h4>Solidaridad</h4>
                 </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-check2"></i>
+                  <h4>Igualdad</h4>
+                </div>
+                <!-- <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
                   quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
+                  voluptatem eum.</p> -->
+                  <div class="d-flex align-items-center mt-4">
+                    <i class="bi bi-check2"></i>
+                    <h4>Compromiso</h4>
+                  </div>
+                  <div class="d-flex align-items-center mt-4">
+                    <i class="bi bi-check2"></i>
+                    <h4>Coherencia</h4>
+                  </div>
 
               </div><!-- End Tab 3 Content -->
 
