--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-  <link href="assets/css/variables.css" rel="stylesheet">
+  <!-- <link href="assets/css/variables.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-blue.css" rel="stylesheet"> -->
-  <!-- <link href="assets/css/variables-green.css" rel="stylesheet"> -->
+  <link href="assets/css/variables-green.css" rel="stylesheet">
   <!-- <link href="assets/css/variables-orange.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-purple.css" rel="stylesheet"> -->
   <!-- <link href="assets/css/variables-red.css" rel="stylesheet"> -->
@@ -39,13 +39,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: HeroBiz
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/herobiz-bootstrap-business-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -55,76 +48,21 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Avanzando<span>Juntos</span></h1>
+      <h1>Avanzando<span>Juntos</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-
-          <!-- <li class="dropdown"><a href="#"><span>Home</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul> -->
           <li><a href="index.html" class="active">Inicio</a></li>
-          <!-- <li><a href="index-2.html" class="active">Home 2 - index-2.html</a></li>
-              <li><a href="index-3.html">Home 3 - index-3.html</a></li>
-              <li><a href="index-4.html">Home 4 - index-4.html</a></li>
-            </ul>
-          </li> -->
-
           <li><a class="nav-link scrollto" href="index.html#about">Sobre Nosotros</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Servicios</a></li>
           <li><a class="nav-link scrollto" href="index.html#portfolio">Proyectos</a></li>
           <li><a class="nav-link scrollto" href="index.html#team">Patrocinadores</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <!-- <li class="dropdown megamenu"><a href="#"><span>Mega Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li>
-                <a href="#">Column 1 link 1</a>
-                <a href="#">Column 1 link 2</a>
-                <a href="#">Column 1 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 2 link 1</a>
-                <a href="#">Column 2 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 3 link 1</a>
-                <a href="#">Column 3 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <a href="#">Column 4 link 1</a>
-                <a href="#">Column 4 link 2</a>
-                <a href="#">Column 4 link 3</a>
-              </li>
-            </ul>
-          </li> -->
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
           <li><a class="nav-link scrollto" href="index.html#contact">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
-      </nav><!-- .navbar -->
-
-      <!-- <a class="btn-getstarted scrollto" href="index.html#about">Get Started</a> -->
-
+      </nav>
     </div>
   </header><!-- End Header -->
 
@@ -156,7 +94,7 @@
           <div class="row justify-content-center gy-6">
 
             <div class="col-lg-5 col-md-8">
-              <img src="assets/img/hero-carousel/hero-carousel-2.svg" alt="" class="img-fluid img">
+              <img src="assets/img/portada-2.jpg" alt="" class="img-fluid img">
             </div>
 
             <div class="col-lg-9 text-center">
@@ -176,7 +114,7 @@
           <div class="row justify-content-center gy-6">
 
             <div class="col-lg-5 col-md-8">
-              <img src="assets/img/hero-carousel/hero-carousel-3.svg" alt="" class="img-fluid img">
+              <img src="assets/img/portada-3.jpg" alt="" class="img-fluid img">
             </div>
 
             <div class="col-lg-9 text-center">
@@ -214,7 +152,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-book-half icon"></i></div>
+              <div class="icon"><i class="bi bi-person-workspace icon"></i></div>
               <i class=""></i>
               <h4><a href="" class="stretched-link">Capacitaciones</a></h4>
               <p>Capacitaciones en varias áreas como belleza, electricidad, informática y mucho más. </p>            </div>
@@ -222,7 +160,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-bounding-box-circles icon"></i></div>
+              <div class="icon"><i class="bi bi-person-hearts icon"></i></div>
               <h4><a href="" class="stretched-link">Apoyo a Grupos Vulnerables</a></h4>
               <p>Apoyo a los grupos vulnerables como niños huérfanos, personas mayores, personas con discapacidad, entre otros en situación de riesgo. </p>
             </div>
@@ -230,7 +168,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-calendar4-week icon"></i></div>
+              <div class="icon"><i class="bi bi-hearts icon"></i></div>
               <h4><a href="" class="stretched-link">Donaciones</a></h4>
               <p>Recaudación de fondos y proporcionar donaciones a los grupos más vulnerables. </p>
             </div>
@@ -238,7 +176,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="600">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-broadcast icon"></i></div>
+              <div class="icon"><i class="bi bi-clipboard-heart-fill icon"></i></div>
               <h4><a href="" class="stretched-link">Proyectos de Desarrollo</a></h4>
               <p>Iniciamos y apoyamos proyectos que contribuyen al desarrollo sostenible de comunidades.</p>
             </div>
