Refactor variable names and improve code readability

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
-      <h1>Avanzando<span>Juntos</span></h1>
+        <h1>Avanzando<span>Juntos</span></h1>
       </a>
 
       <nav id="navbar" class="navbar">
@@ -75,12 +75,12 @@
           <div class="row justify-content-center gy-6">
 
             <div class="col-lg-5 col-md-8">
-              <img src="assets/img/portada.jpg" alt="" class="img-fluid img">
+              <img src="assets/img/portada-one.jpeg" alt="" class="img-fluid img">
             </div>
 
             <div class="col-lg-9 text-center">
-              <h2>Bienvenido a la Fundacion Avanzando Juntos</h2>
-              <p>Capacitación de grupos vulnerables, donde cada persona tenga la oportunidad de desarrollar 
+              <h2>Bienvenido a la Fundación Avanzando Juntos</h2>
+              <p>Capacitación de grupos vulnerables, donde cada persona tenga la oportunidad de desarrollar
                 plenamente su potencial.</p>
               <a href="#featured-services" class="btn-get-started scrollto">Comenzar</a>
             </div>
@@ -106,7 +106,7 @@
             </div>
 
           </div>
-        </div>
+        </div>`
       </div><!-- End Carousel Item -->
 
       <div class="carousel-item">
@@ -155,14 +155,16 @@
               <div class="icon"><i class="bi bi-person-workspace icon"></i></div>
               <i class=""></i>
               <h4><a href="" class="stretched-link">Capacitaciones</a></h4>
-              <p>Capacitaciones en varias áreas como belleza, electricidad, informática y mucho más. </p>            </div>
+              <p>Capacitaciones en varias áreas como belleza, electricidad, informática y mucho más. </p>
+            </div>
           </div><!-- End Service Item -->
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="zoom-out" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-person-hearts icon"></i></div>
               <h4><a href="" class="stretched-link">Apoyo a Grupos Vulnerables</a></h4>
-              <p>Apoyo a los grupos vulnerables como niños huérfanos, personas mayores, personas con discapacidad, entre otros en situación de riesgo. </p>
+              <p>Apoyo a los grupos vulnerables como niños huérfanos, personas mayores, personas con discapacidad, entre
+                otros en situación de riesgo. </p>
             </div>
           </div><!-- End Service Item -->
 
@@ -193,18 +195,18 @@
 
         <div class="section-header">
           <h2>Sobre Nosotros</h2>
-         <p>
-          Somos una Fundación creada según <strong> Resolución Administrativa No. 009-
-            DDSD-2022 del Ministerio de Inclusión Económica y Social </strong>  con fecha 6 de abril del 2022 
-          en la que se otorga Personalidad Jurídica y se aprueban los estatutos.
-         </p> 
+          <p>
+            Somos una Fundación creada según <strong> Resolución Administrativa No. 009-
+              DDSD-2022 del Ministerio de Inclusión Económica y Social </strong> con fecha 6 de abril del 2022
+            en la que se otorga Personalidad Jurídica y se aprueban los estatutos.
+          </p>
         </div>
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/sobre-nosotros.jpeg" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -225,9 +227,9 @@
 
               <div class="tab-pane fade show active" id="tab1">
 
-                <p class="fst-italic">Promover el derecho de las personas a la educación mediante convenios de ayuda 
-                  mutua con énfasis en grupos de atención prioritaria, promoviendo el desarrollo integral 
-                  de las capacidades individuales y colectivas como instrumento para la transformación 
+                <p class="fst-italic">Promover el derecho de las personas a la educación mediante convenios de ayuda
+                  mutua con énfasis en grupos de atención prioritaria, promoviendo el desarrollo integral
+                  de las capacidades individuales y colectivas como instrumento para la transformación
                   de la sociedad y la erradicación de la pobreza.</p>
 
                 <!-- <div class="d-flex align-items-center mt-4">
@@ -257,14 +259,14 @@
 
               <div class="tab-pane fade show" id="tab2">
 
-                <p class="fst-italic">Nos vemos como una Fundación líder y referente en la capacitación de grupos 
-                  vulnerables de la sociedad, donde cada persona tenga la oportunidad de desarrollar 
-                  plenamente su potencial. Nuestra visión es una sociedad inclusiva y equitativa, donde 
-                  todos los individuos, sin importar sus circunstancias, tengan acceso a oportunidades de 
-                  aprendizaje y empoderamiento. A través de programas innovadores y colaborativos, 
-                  aspiramos a transformar vidas y generar un impacto significativo en las comunidades 
+                <p class="fst-italic">Nos vemos como una Fundación líder y referente en la capacitación de grupos
+                  vulnerables de la sociedad, donde cada persona tenga la oportunidad de desarrollar
+                  plenamente su potencial. Nuestra visión es una sociedad inclusiva y equitativa, donde
+                  todos los individuos, sin importar sus circunstancias, tengan acceso a oportunidades de
+                  aprendizaje y empoderamiento. A través de programas innovadores y colaborativos,
+                  aspiramos a transformar vidas y generar un impacto significativo en las comunidades
                   que servimos.
-                  </p>
+                </p>
 
                 <!-- <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
@@ -321,14 +323,14 @@
                 <!-- <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
                   quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
                   voluptatem eum.</p> -->
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-check2"></i>
-                    <h4>Compromiso</h4>
-                  </div>
-                  <div class="d-flex align-items-center mt-4">
-                    <i class="bi bi-check2"></i>
-                    <h4>Coherencia</h4>
-                  </div>
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-check2"></i>
+                  <h4>Compromiso</h4>
+                </div>
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-check2"></i>
+                  <h4>Coherencia</h4>
+                </div>
 
               </div><!-- End Tab 3 Content -->
 
@@ -368,16 +370,17 @@
         <div class="row g-5">
 
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-            <h3>Alias sunt quas <em>Cupiditate</em> oluptas hic minima</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-              laborum.</p>
-            <a class="cta-btn align-self-start" href="#">Call To Action</a>
+            <h3>La Fundación <em>Avanzando Juntos</em></h3>
+            <p>Les recuerda que pueden contribuir con donaciones de ropa, juguetes, comida
+              en buen estado y otros artículos. Su generosidad hace una gran diferencia en nuestras iniciativas para
+              ayudar a quienes más lo necesitan.</p>
+
+            <a class="cta-btn align-self-start" href="#">Donar</a>
           </div>
 
           <div class="col-lg-4 col-md-6 order-first order-md-last d-flex align-items-center">
             <div class="img">
-              <img src="assets/img/cta.jpg" alt="" class="img-fluid">
+              <img src="assets/img/donar.jpg" alt="" class="img-fluid">
             </div>
           </div>
 
@@ -396,19 +399,23 @@
           </div>
           <div class="col-lg-6">
             <div class="content d-flex flex-column justify-content-center h-100">
-              <h3>Voluptatem dignissimos provident quasi corporis</h3>
+              <h3>Participar de Voluntariado en la Fundación</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore
-                magna aliqua.
+              <p>Como voluntario, tendrás la oportunidad de participar en diversas actividades solidarias, desde eventos
+                de recaudación de fondos hasta la distribución de ayuda a familias necesitadas. ¡Tu ayuda es valiosa!
+              </p>
               </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                  aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                  pariatur.</li>
+                <li><i class="bi bi-check-circle"></i> Contribuirás directamente al bienestar de la comunidad.</li>
+                <li><i class="bi bi-check-circle"></i> Desarrollarás habilidades y experiencias enriquecedoras.</li>
+                <li><i class="bi bi-check-circle"></i> Serás parte de una red solidaria que marca la diferencia.</li>
               </ul>
+
+              <p>Si estás interesado en ser voluntario, completa nuestro <a
+                  href="enlace-al-formulario-de-voluntariado">formulario de voluntariado</a> o ponte en contacto con
+                nosotros a través de <a
+                  href="mailto:info@fundacionavanzandojuntos.org">info@fundacionavanzandojuntos.org</a>. Estamos
+                emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
               <a href="#" class="read-more align-self-start"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
