--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul>
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">Sobre Nosotros</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Servicios</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Cursos</a></li>
           <li><a class="nav-link scrollto" href="index.html#portfolio">Proyectos</a></li>
           <li><a class="nav-link scrollto" href="index.html#team">Patrocinadores</a></li>
           <li><a href="blog.html">Blog</a></li>
@@ -414,7 +414,7 @@
               <p>Si estás interesado en ser voluntario, completa nuestro <a
                   href="enlace-al-formulario-de-voluntariado">formulario de voluntariado</a> o ponte en contacto con
                 nosotros a través de <a
-                  href="mailto:info@fundacionavanzandojuntos.org">info@fundacionavanzandojuntos.org</a>. Estamos
+                  href="mailto:info@fundacionavanzandojuntos.org">avanzandojuntosfundacion@gmail.com</a>. Estamos
                 emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
               <a href="#" class="read-more align-self-start"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
             </div>
@@ -425,7 +425,7 @@
     </section><!-- End On Focus Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!-- <section id="features" class="features">
       <div class="container" data-aos="fade-up">
 
         <ul class="nav nav-tabs row gy-4 d-flex">
@@ -435,42 +435,42 @@
               <i class="bi bi-binoculars color-cyan"></i>
               <h4>Modinest</h4>
             </a>
-          </li><!-- End Tab 1 Nav -->
+          </li>
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
               <i class="bi bi-box-seam color-indigo"></i>
               <h4>Undaesenti</h4>
             </a>
-          </li><!-- End Tab 2 Nav -->
+          </li>
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
               <i class="bi bi-brightness-high color-teal"></i>
               <h4>Pariatur</h4>
             </a>
-          </li><!-- End Tab 3 Nav -->
+          </li>
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
               <i class="bi bi-command color-red"></i>
               <h4>Nostrum</h4>
             </a>
-          </li><!-- End Tab 4 Nav -->
+          </li>
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
               <i class="bi bi-easel color-blue"></i>
               <h4>Adipiscing</h4>
             </a>
-          </li><!-- End Tab 5 Nav -->
+          </li>
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-6">
               <i class="bi bi-map color-orange"></i>
               <h4>Reprehit</h4>
             </a>
-          </li><!-- End Tab 6 Nav -->
+          </li>
 
         </ul>
 
@@ -506,7 +506,7 @@
                 <img src="assets/img/features-1.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 1 -->
+          </div>
 
           <div class="tab-pane" id="tab-2">
             <div class="row gy-4">
@@ -540,7 +540,8 @@
                 <img src="assets/img/features-2.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 2 -->
+          </div>
+          
 
           <div class="tab-pane" id="tab-3">
             <div class="row gy-4">
@@ -571,7 +572,7 @@
                 <img src="assets/img/features-3.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 3 -->
+          </div>
 
           <div class="tab-pane" id="tab-4">
             <div class="row gy-4">
@@ -603,7 +604,7 @@
                 <img src="assets/img/features-4.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 4 -->
+          </div>
 
           <div class="tab-pane" id="tab-5">
             <div class="row gy-4">
@@ -635,7 +636,7 @@
                 <img src="assets/img/features-5.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 5 -->
+          </div>
 
           <div class="tab-pane" id="tab-6">
             <div class="row gy-4">
@@ -667,12 +668,12 @@
                 <img src="assets/img/features-6.svg" alt="" class="img-fluid">
               </div>
             </div>
-          </div><!-- End Tab Content 6 -->
+          </div>
 
         </div>
 
       </div>
-    </section><!-- End Features Section -->
+    </section>End Features Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
