Update services section with course information

--- a/index.html
+++ b/index.html
@@ -680,9 +680,16 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Services</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores
-            adipisci aliquam.</p>
+          <h2>Cursos</h2>
+          <p>En la Fundación Avanzando Juntos, nos enorgullece ofrecer cursos educativos de alta calidad de forma
+            totalmente gratuita para aquellos que más lo necesitan. 
+            <strong>Creemos en el poder de la educación para transformar
+              vidas y estamos comprometidos a proporcionar oportunidades de aprendizaje inclusivas.</strong></p>
+
+          <!-- <p>Tenemos establecido colaboraciones significativas con empresas comprometidas con la responsabilidad
+            social. Gracias a estos valiosos socios, podemos ofrecer descuentos especiales en nuestros cursos,
+            facilitando el acceso a la educación a un público más amplio.</p> -->
+
         </div>
 
         <div class="row gy-5">
@@ -690,14 +697,14 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/cursos/corte de cabello.jpeg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="bi bi-activity"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Nesciunt Mete</h3>
+                  <h3>Corte de Cabello</h3>
                 </a>
                 <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure
                   perferendis.</p>
@@ -708,14 +715,14 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/cursos/pintado de uñas.jpeg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="bi bi-broadcast"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Eosle Commodi</h3>
+                  <h3>Pintado de uñas</h3>
                 </a>
                 <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
                   nesciunt dolorem.</p>
@@ -726,14 +733,14 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/cursos/electricidad.jpeg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Ledo Markt</h3>
+                  <h3>Electricidad</h3>
                 </a>
                 <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
                   eos earum corrupti.</p>
@@ -751,7 +758,7 @@
                   <i class="bi bi-bounding-box-circles"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Asperiores Commodit</h3>
+                  <h3>Computacion</h3>
                 </a>
                 <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
                   adipisci neque.</p>
@@ -770,7 +777,7 @@
                   <i class="bi bi-calendar4-week"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Velit Doloremque</h3>
+                  <h3>Carpinteria</h3>
                 </a>
                 <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at
                   autem alias eius labore.</p>
@@ -789,7 +796,7 @@
                   <i class="bi bi-chat-square-text"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Dolori Architecto</h3>
+                  <h3>Maquillaje</h3>
                 </a>
                 <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
                   recusandae ducimus enim.</p>
