Update navigation links and text in index.html

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <li><a href="index.html" class="active">Inicio</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">Sobre Nosotros</a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Cursos</a></li>
-          <li><a class="nav-link scrollto" href="index.html#portfolio">Proyectos</a></li>
-          <li><a class="nav-link scrollto" href="index.html#team">Patrocinadores</a></li>
+          <li><a class="nav-link scrollto" href="index.html#portfolio">Galería</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Auspiciantes</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contacto</a></li>
         </ul>
@@ -416,7 +416,8 @@
                 nosotros a través de <a
                   href="mailto:info@fundacionavanzandojuntos.org">avanzandojuntosfundacion@gmail.com</a>. Estamos
                 emocionados de trabajar contigo para hacer un impacto positivo en nuestra comunidad.</p>
-              <a href="#" class="read-more align-self-start"><span>Me interesa</span><i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="read-more align-self-start"><span>Me interesa</span><i
+                  class="bi bi-arrow-right"></i></a>
             </div>
           </div>
         </div>
@@ -682,9 +683,10 @@
         <div class="section-header">
           <h2>Cursos</h2>
           <p>En la Fundación Avanzando Juntos, nos enorgullece ofrecer cursos educativos de alta calidad de forma
-            totalmente gratuita para aquellos que más lo necesitan. 
+            totalmente gratuita para aquellos que más lo necesitan.
             <strong>Creemos en el poder de la educación para transformar
-              vidas y estamos comprometidos a proporcionar oportunidades de aprendizaje inclusivas.</strong></p>
+              vidas y estamos comprometidos a proporcionar oportunidades de aprendizaje inclusivas.</strong>
+          </p>
 
           <!-- <p>Tenemos establecido colaboraciones significativas con empresas comprometidas con la responsabilidad
             social. Gracias a estos valiosos socios, podemos ofrecer descuentos especiales en nuestros cursos,
@@ -912,7 +914,7 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->    
+    </section><!-- End Testimonials Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
@@ -1202,9 +1204,10 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Team</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas
-            asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <h2>Nuestros Auspiciantes</h2>
+          <p>Agradecemos sinceramente a nuestros valiosos auspiciantes por su generoso apoyo. Su contribución hace
+            posible que llevemos a cabo nuestra misión y impactemos positivamente en la comunidad. Conoce a quienes
+            hacen posible nuestro trabajo y únete a nosotros para expresarles nuestro agradecimiento.</p>
         </div>
 
         <div class="row gy-5">
@@ -1221,7 +1224,7 @@
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>Walter White</h4>
+                <h4>Centro de Capacitación BES</h4>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
@@ -1357,7 +1360,8 @@
 
             <div class="info">
               <h3>Ponte en contacto con nosotros</h3>
-              <p>Estamos encantados de poder hablar contigo. Si tienes alguna pregunta, comentario o simplemente quieres saludar, no dudes en contactarnos.</p>
+              <p>Estamos encantados de poder hablar contigo. Si tienes alguna pregunta, comentario o simplemente quieres
+                saludar, no dudes en contactarnos.</p>
 
 
               <div class="info-item d-flex">
@@ -1462,8 +1466,9 @@
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Nuestro Boletín</h4>
+            <p>Descubre las últimas noticias y avances de nuestra fundación. Mantente informado sobre nuestras
+              iniciativas, proyectos y cómo puedes ser parte del cambio positivo. Tu apoyo hace la diferencia.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
