Update images and text in index.html

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
             <h3>La Fundación <em>Avanzando Juntos</em></h3>
-            <p>Les recuerda que pueden contribuir con donaciones de ropa, juguetes, comida
+            <p>Les recuerda que pueden contribuir con donaciones económicas ,  de ropa, juguetes, comida
               en buen estado y otros artículos. Su generosidad hace una gran diferencia en nuestras iniciativas para
               ayudar a quienes más lo necesitan.</p>
 
@@ -1215,7 +1215,7 @@
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/auspiciantes/BES.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -1229,11 +1229,10 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-
-          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="400">
+          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/auspiciantes/BES.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -1242,16 +1241,35 @@
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Centro de Capacitación BES</h4>
+                <span>Chief Executive Officer</span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+          <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="200">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/auspiciantes/cnel.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+                <h4>CNEL Santo Domingo</h4>
+                <span>Chief Executive Officer</span>
               </div>
             </div>
           </div><!-- End Team Member -->
 
+          
+
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="600">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/auspiciantes/espe.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <div class="social">
@@ -1260,7 +1278,7 @@
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
-                <h4>William Anderson</h4>
+                <h4>Universidad de las Fuerzas Armadas </h4>
                 <span>CTO</span>
               </div>
             </div>
