--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 
           <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
             <h3>La Fundación <em>Avanzando Juntos</em></h3>
-            <p>Les recuerda que pueden contribuir con donaciones económicas ,  de ropa, juguetes, comida
+            <p>Les recuerda que pueden contribuir con donaciones económicas , de ropa, juguetes, comida
               en buen estado y otros artículos. Su generosidad hace una gran diferencia en nuestras iniciativas para
               ayudar a quienes más lo necesitan.</p>
 
@@ -1263,9 +1263,6 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-
-          
-
           <div class="col-xl-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="600">
             <div class="team-member">
               <div class="member-img">
@@ -1357,9 +1354,10 @@
       <div class="container">
 
         <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores
-            adipisci aliquam.</p>
+          <h2>Contáctenos</h2>
+          <p>Estamos aquí para escucharte. Si tienes alguna pregunta, sugerencia o simplemente quieres conocernos mejor,
+            no dudes en ponerte en contacto con nosotros. Tu opinión es importante para nosotros.</p>
+
         </div>
 
       </div>
@@ -1503,14 +1501,14 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>HeroBiz</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Fundación Avanzando Juntos</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="https://anyel.top">Anyel EC</a>
           </div>
         </div>
 
@@ -1521,7 +1519,6 @@
           <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
-
       </div>
     </div>
 
