--- a/index.html
+++ b/index.html
@@ -1451,10 +1451,10 @@
             <div class="footer-info">
               <h3>HeroBiz</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                C. Latacunga 356-456 <br>
+                Santo Domingo<br><br>
+                <strong>Celular:</strong> +593 96 779 2409<br>
+                <strong>Correo:</strong> avanzandojuntosfundacion@gmail.com<br>
               </p>
             </div>
           </div>
@@ -1462,22 +1462,22 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Cursos</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Términos de servicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Política de privacidad</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Cursos</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Maquillaje</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Pintado de uñas</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Electricidad</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Carpintería</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Computación</a></li>
             </ul>
           </div>
 
