--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-activity"></i>
+                  <i class="bi bi-person"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Corte de Cabello</h3>
@@ -721,7 +721,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-broadcast"></i>
+                  <i class="bi bi-snapchat"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Pintado de uñas</h3>
@@ -739,7 +739,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-easel"></i>
+                  <i class="bi bi-lightning-charge-fill"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Electricidad</h3>
@@ -757,7 +757,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-bounding-box-circles"></i>
+                  <i class="bi bi-pc-display-horizontal"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Computación </h3>
@@ -776,7 +776,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-calendar4-week"></i>
+                  <i class="bi bi bi-hammer"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Carpintería </h3>
@@ -795,7 +795,7 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-chat-square-text"></i>
+                  <i class="bi bi-brush"></i>
                 </div>
                 <a href="#" class="stretched-link">
                   <h3>Maquillaje</h3>
@@ -1293,7 +1293,8 @@
 
         <div class="section-header">
           <h2>Blog</h2>
-          <p>Recent posts form our Blog</p>
+          <p>Publicaciones recientes de nuestro Blog
+          </p>
         </div>
 
         <div class="row">
@@ -1449,7 +1450,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>HeroBiz</h3>
+              <h3>Fundación Avanzando Juntos</h3>
               <p>
                 C. Latacunga 356-456 <br>
                 Santo Domingo<br><br>
@@ -1460,7 +1461,7 @@
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Enlaces de interés</h4>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Sobre Nosotros</a></li>
